--- a/Password Book/Password Book.csproj
+++ b/Password Book/Password Book.csproj
@@ -53,31 +53,31 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ConfirmForm.cs">
+    <Compile Include="Forms\ConfirmForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="ConfirmForm.Designer.cs">
+    <Compile Include="Forms\ConfirmForm.Designer.cs">
       <DependentUpon>ConfirmForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Helpers.cs" />
-    <Compile Include="MainForm.cs">
+    <Compile Include="Forms\MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="MainForm.Designer.cs">
+    <Compile Include="Forms\MainForm.Designer.cs">
       <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SetPassword.cs">
+    <Compile Include="Forms\SetPassword.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="SetPassword.Designer.cs">
+    <Compile Include="Forms\SetPassword.Designer.cs">
       <DependentUpon>SetPassword.cs</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="ConfirmForm.resx">
+    <EmbeddedResource Include="Forms\ConfirmForm.resx">
       <DependentUpon>ConfirmForm.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="MainForm.resx">
+    <EmbeddedResource Include="Forms\MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
@@ -89,7 +89,7 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="SetPassword.resx">
+    <EmbeddedResource Include="Forms\SetPassword.resx">
       <DependentUpon>SetPassword.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="Properties\Settings.settings">
